--- a/SOL/practica2-6/src/VistaControlador/AgregarUsuarios.form
+++ b/SOL/practica2-6/src/VistaControlador/AgregarUsuarios.form
@@ -55,20 +55,20 @@
                                       </Group>
                                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                                       <Group type="103" groupAlignment="0" attributes="0">
-                                          <Component id="txtFecha" min="-2" pref="126" max="-2" attributes="0"/>
                                           <Component id="txtNombre" min="-2" pref="199" max="-2" attributes="0"/>
                                           <Group type="102" attributes="0">
                                               <Component id="txtConfirmarContraseña" min="-2" pref="199" max="-2" attributes="0"/>
                                               <EmptySpace min="-2" pref="47" max="-2" attributes="0"/>
                                               <Component id="checkBoxMostrar2" min="-2" pref="86" max="-2" attributes="0"/>
                                           </Group>
-                                          <Component id="txtApellido" alignment="0" min="-2" pref="199" max="-2" attributes="0"/>
                                           <Group type="103" alignment="0" groupAlignment="1" attributes="0">
                                               <Component id="botonAgregar" min="-2" pref="105" max="-2" attributes="0"/>
                                               <Component id="txtCorreo" min="-2" pref="199" max="-2" attributes="0"/>
                                           </Group>
                                           <Component id="txtContraseña" alignment="0" min="-2" pref="199" max="-2" attributes="0"/>
                                           <Component id="txtUsuario" alignment="0" min="-2" pref="199" max="-2" attributes="0"/>
+                                          <Component id="txtApellido" alignment="0" min="-2" pref="199" max="-2" attributes="0"/>
+                                          <Component id="calendario" min="-2" pref="199" max="-2" attributes="0"/>
                                       </Group>
                                   </Group>
                               </Group>
@@ -119,12 +119,12 @@
                   <Component id="jLabel5" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="txtApellido" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace min="-2" pref="31" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="jLabel6" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="txtFecha" alignment="3" min="-2" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="1" attributes="0">
+                  <Component id="jLabel6" min="-2" max="-2" attributes="0"/>
+                  <Component id="calendario" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="32" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="jLabel7" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="txtCorreo" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -179,12 +179,13 @@
     </Component>
     <Component class="javax.swing.JTextField" name="txtApellido">
     </Component>
-    <Component class="javax.swing.JTextField" name="txtFecha">
-    </Component>
     <Component class="javax.swing.JButton" name="botonVolver">
       <Properties>
         <Property name="text" type="java.lang.String" value="Volver"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="botonVolverActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="botonAgregar">
       <Properties>
@@ -236,6 +237,8 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Agregar datos opcionales del nuevo usuario: "/>
       </Properties>
+    </Component>
+    <Component class="com.toedter.calendar.JDateChooser" name="calendario">
     </Component>
   </SubComponents>
 </Form>
